<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SphinxQA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_pick_a_file">Pick a file</string>
    <string name="txt_dots" translatable="false">.   .   .</string>
    <string name="txt_play">Play</string>
    <string name="pick_video_title">Pick a video file</string>
    <string name="pick_src_title">Source</string>
    <string name="pick_dst_title">Destination</string>
    <string name="dlg_src_title">Pick a foreign subtitle file</string>
    <string name="dlg_dst_title">Pick a native subtitle file</string>
    <string name="title_activity_player">SphinxQA: Player</string>
    <string name="sample_text" translatable="false">ADFSAFDAS</string>
    <string name="sample_media_route_activity_presentation">Sample media...</string>
    <string name="title_activity_marked">SphinxQA: Marked Subtitles</string>
    <string name="action_marked">Marked</string>
    <string name="txt_welcome">Welcome to SphinxQA</string>
    <string name="txt_app_desc">Get started now with SphinxQA and start to creating your personal flashcards from series or movies</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="the_same_files">The same files has been picked</string>
    <string name="subs_time_arrow" translatable="false"><![CDATA[- - >]]></string>
    <string name="btn_export">Export</string>
    <string name="save_file_progress_title">Wait</string>
    <string name="save_file_progress_info">Saving file...</string>
    <string name="save_file_final_message_ok">"Cards have been saved to "</string>
    <string name="save_file_final_message_fail">Something went wrong...</string>
    <string name="pref_MovieMinSize_title">Greater then [MB]</string>
    <string name="pref_MovieMinSize_summary">Series are usually file greater than 100 MB</string>
    <string name="pref_MovieMinDuration_title">Greater then [min]</string>
    <string name="pref_MovieMinDuration_summary">Series are usually movies longer than 20 minutes</string>
    <string name="pref_cat_movie_searching">MOVIE SEARCHING</string>
    <string name="pref_cat_subtitles">SUBTITLES</string>
    <string name="title_activity_settings">SphinxQA: Settings</string>
    <string name="dialog_number_picker_up_text" translatable="false">+</string>
    <string name="dialog_number_picker_down_text" translatable="false">-</string>
    <string name="pref_cat_saving_data">SAVING DATA</string>
    <string name="pref_StorageType_title">Select a folder for output file storage</string>
    <string name="pref_StorageAppFolder_summary" translatable="false">/sdcard/SphinxQA/</string>
    <string name="pref_Charset_title">Select your charset</string>
    <string name="pref_PlayerShowSubtitles_title">Player: Show second subtitles</string>
    <string name="pref_ListShowSubtitles_title">List: Show second subtitles</string>
    <string name="pref_FirstSubtitlesSize_title">First subtitles size</string>
    <string name="pref_SecondSubtitlesSize_title">Second subtitles size</string>
    <string name="pref_StorageAppFolder_title">Storage app folder</string>
    <string name="pref_StorageUserFolder_title">Choose storage folder</string>
    <string name="pref_StorageFolder_default" translatable="false">/sdcard/SphinxQA/</string>
    <string name="player_show_subtitles_never">never</string>
    <string name="storage_folder_created">"Folder has been created: "</string>
    <string name="storage_folder_fail">"Storage folder doesn't exists or cannot  be created: "</string>
    <string name="subtitles_size_small">small</string>
    <string name="subtitles_size_medium">medium</string>
    <string name="subtitles_size_large">large</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_merge">Merge</string>
    <string name="action_export">Export to file</string>
    <string name="action_email">Send by email</string>
    <string name="title_activity_edit">SphinxQA: Edit Card</string>
    <string name="title_activity_help">SphinxQA: Help</string>
    <string name="action_help">Help</string>
    <string name="dialog_delete_card_message">Do you really wan\'t to delete checked cards (%d)?</string>
    <string name="dialog_delete_card_title">Delete cards</string>
    <string name="title_activity_merge">SphinxQA: Merge Cards</string>
    <string name="mail_extra_text">File contains a deck of flashcards based on the movie:\n
%1$s\n
Number of cards: %2$d\n
The deck has been created by SphinxQA application.\n</string>
    <string name="pref_UserContact_title">User mail</string>
    <string name="pref_UserContact_summary">Contact for sending by mail</string>
    <string name="merger_text">Merger</string>
    <string name="text_question">Question:</string>
    <string name="text_answer">Answer:</string>
    <string name="progress_player_title">Player</string>
    <string name="progress_player_message">Loading movie and subtitles...</string>
    <string name="progress_cards_title">Cards</string>
    <string name="progress_cards_message">Loading...</string>
    <string name="action_export_qa">Questions and Answers</string>
    <string name="action_export_csv">CSV</string>
    <string name="action_export_tab">TAB separated</string>
    <string name="action_export_sem">Semicolon separated</string>
    <string name="hint_pick_video_file">Movie greater than %1$d MB and longer than %2$d min.</string>
    <string name="hint_pick_subs_file">File in a *.srt format</string>
    <string name="pick_video_file_fail">There is no any matched files</string>
    <string name="pref_cat_main">MAIN</string>
    <string name="pref_lang_title">Select your language</string>
    <string name="pref_lang_summary">Changes will be seen after exit from Settings</string>
</resources>
